Make lucene index writer abstract ()